--- a/daftar.html
+++ b/daftar.html
@@ -52,37 +52,55 @@
         <div class="container kotak-sign p-5">
             <p class="judul text-center"><b>Daftar</b></p>
             <p class="mb-5">Segera daftarkan akun Vocatinestmu dan akses beragam fitur pencarian kerja, pengenalan diri, dan pelatihan.</p>
-            <form>
+            <form class="needs-validation" novalidate action="masuk.html">
                 <div class="form-group">
                     <label>Nama Lengkap</label>
-                    <input class="form-control" placeholder="Masukkan Nama Lengkap Anda">
+                    <input class="form-control" placeholder="Masukkan Nama Lengkap Anda" name="name" required>
+                    <div class="invalid-feedback">
+                        Wajib diisi
+                    </div>
                 </div>
                 <div class="form-group">
                     <label>Email Anda</label>
-                    <input type="email" class="form-control" placeholder="Masukkan Alamat Email Anda">
+                    <input type="email" class="form-control" placeholder="Masukkan Alamat Email Anda" name="email" required>
+                    <div class="invalid-feedback">
+                        Email tidak valid
+                    </div>
                 </div>
                 <div class="form-group">
                     <label>Password</label>
-                    <input type="password" class="form-control">
+                    <input type="password" class="form-control" name="password" required>
+                    <div class="invalid-feedback">
+                        Password dan konfirmasi password harus sama
+                    </div>
                 </div>
                 <div class="form-group">
                     <label>Konfirmasi Password</label>
-                    <input type="password" class="form-control">
+                    <input type="password" class="form-control" name="repassword" required>
+                    <div class="invalid-feedback">
+                        Password dan konfirmasi password harus sama
+                    </div>
                 </div>
                 <div class="form-check mb-2">
-                    <input class="form-check-input" type="checkbox" value="">
+                    <input class="form-check-input" type="checkbox" value="" name="agree1" required>
                     <label class="form-check-label" for="defaultCheck1">
                         Saya menyetujui Syarat dan Ketentuan & Kebijakan Privasi
                     </label>
+                    <div class="invalid-feedback">
+                        Anda harus setuju
+                    </div>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="">
+                    <input class="form-check-input" type="checkbox" value="" name="agree1" required>
                     <label class="form-check-label" for="defaultCheck1">
                         Saya menyetujui jika akan dihubungi oleh perusahaan / instansi terbaik
                     </label>
+                    <div class="invalid-feedback">
+                        Anda harus setuju
+                    </div>
                 </div>
                 <div class="col-12 text-center my-5">
-                    <a href="masuk.html" type="submit" class="btn btndefault">Daftar Sekarang</a>
+                    <button class="btn btndefault" type="submit">Daftar Sekarang</button>
                 </div>
                 <div class="col-12 text-center">
                     <p class="kecil mr-1">Sudah punya Akun?</p>
@@ -132,7 +150,59 @@
     <!-- Footer -->
 
 
-
+<script>
+    $(function(){
+        $('[name=password]').change(function() {
+            if($('[name=repassword]').val() != $(this).val()){
+                $('[name=password]').addClass('is-invalid')
+                $('[name=repassword]').addClass('is-invalid')
+            }else{
+                $('[name=password]').removeClass('is-invalid')
+                $('[name=repassword]').removeClass('is-invalid')
+            }
+        })
+        $('[name=repassword]').change(function() {
+            if($('[name=password]').val() != $(this).val()){
+                $('[name=password]').addClass('is-invalid')
+                $('[name=repassword]').addClass('is-invalid')
+            }else{
+                $('[name=password]').removeClass('is-invalid')
+                $('[name=repassword]').removeClass('is-invalid')
+            }
+        })
+        let forms = $('.needs-validation');
+        // Loop over them and prevent submission
+        let validation = Array.prototype.filter.call(forms, function(form) {
+            form.addEventListener('submit', (event) => {
+                if (form.checkValidity() === false) {
+                    event.preventDefault();
+                    event.stopPropagation();
+                }else{
+                    event.preventDefault();
+                    $.ajax({
+                        url: 'http://localhost:3000/register',
+                        data: JSON.stringify({
+                            email: $('[name=email]').val(),
+                            name: $('[name=name]').val(),
+                            password: $('[name=password]').val(),
+                            role_id: 1,
+                        }),
+                        contentType: "application/json; charset=utf-8",
+                        dataType: 'json',
+                        method: 'POST',
+                        success: (data) => {
+                            window.location.href = 'masuk.html'
+                        },
+                        error: (error) => {
+                            console.log(error)
+                        }
+                    });
+                }
+                form.classList.add('was-validated');
+            }, false);
+        });
+    });
+</script>
 </body>
 
 </html>
