--- a/daftar.html
+++ b/daftar.html
@@ -180,7 +180,7 @@
                 }else{
                     event.preventDefault();
                     $.ajax({
-                        url: 'http://localhost:3000/register',
+                        url: 'https://api.vocatinest.com/register',
                         data: JSON.stringify({
                             email: $('[name=email]').val(),
                             name: $('[name=name]').val(),
