--- a/edit-profil2.html
+++ b/edit-profil2.html
@@ -255,7 +255,7 @@
 
         function getJobByCategory(id){
             $.ajax({
-                url: 'http://localhost:3000/jobs/category/'+id,
+                url: 'https://api.vocatinest.com/jobs/category/'+id,
                 contentType: "application/json; charset=utf-8",
                 dataType: 'json',
                 method: 'GET',
@@ -294,7 +294,7 @@
             });
 
             $.ajax({
-                url: 'http://localhost:3000/company-categories',
+                url: 'https://api.vocatinest.com/company-categories',
                 contentType: "application/json; charset=utf-8",
                 dataType: 'json',
                 method: 'GET',
@@ -309,7 +309,7 @@
             });
 
             $.ajax({
-                url: 'http://localhost:3000/job-categories',
+                url: 'https://api.vocatinest.com/job-categories',
                 contentType: "application/json; charset=utf-8",
                 dataType: 'json',
                 method: 'GET',
@@ -324,7 +324,7 @@
             });
 
             $.ajax({
-                url: 'http://localhost:3000/job-kinds',
+                url: 'https://api.vocatinest.com/job-kinds',
                 contentType: "application/json; charset=utf-8",
                 dataType: 'json',
                 method: 'GET',
@@ -344,7 +344,7 @@
             });
 
             $.ajax({
-                url: 'http://localhost:3000/jobs',
+                url: 'https://api.vocatinest.com/jobs',
                 contentType: "application/json; charset=utf-8",
                 dataType: 'json',
                 method: 'GET',
@@ -359,7 +359,7 @@
             });
 
             $.ajax({
-                url: 'http://localhost:3000/important-careers',
+                url: 'https://api.vocatinest.com/important-careers',
                 contentType: "application/json; charset=utf-8",
                 dataType: 'json',
                 method: 'GET',
@@ -379,7 +379,7 @@
             });
 
             $.ajax({
-                url: 'http://localhost:3000/important-careers',
+                url: 'https://api.vocatinest.com/important-careers',
                 contentType: "application/json; charset=utf-8",
                 dataType: 'json',
                 method: 'GET',
