--- a/masuk.html
+++ b/masuk.html
@@ -122,7 +122,7 @@
             $('form').on('submit', function(ev){
                 ev.preventDefault();
                 $.ajax({
-                    url: 'http://localhost:3000/login',
+                    url: 'https://api.vocatinest.com/login',
                     data: JSON.stringify({
                         email: $('[name=email]').val(),
                         password: $('[name=password]').val()
